cabal-version:      2.4
name:               unsafe-either
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Douglas Wilson
maintainer:         douglas.wilson@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    build-depends:  base,
                    criterion
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules: UnsafeEither

benchmark unsafe-either-bench
    type:             exitcode-stdio-1.0
    main-is:          bench.hs
    build-depends:    unsafe-either
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -rtsopts -with-rtsopts=-T
